[package]
name = "glium_text"
version = "0.11.0"
authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>"]
description = "Text drawing with glium and freetype"
documentation = "https://docs.rs/glium_text"
repository = "https://github.com/tomaka/glium_text"
keywords = ["text", "opengl"]
license = "MIT"

[dependencies]
freetype-sys = "*"
libc = "*"

[dependencies.glium]
version = "*"
default-features = false

[dev-dependencies]
cgmath = "0.12"

[dev-dependencies.glium]
version = "*"
features = ["glutin"]
